--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,10 @@
     },
     "minimum-stability": "beta",
     "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/pamo18/ramverk1-weather"
-        }
-    ],
     "require": {
+        "php": ">=7.2",
         "anax/anax-ramverk1-me": "^1.0.0",
-        "pamo18/ramverk1-weather": "dev-master"
+        "pamo18/ramverk1-weather": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
