--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2",
-        "anax/anax-ramverk1-me": "^1.0.0",
-        "pamo18/ramverk1-weather": "^1.0.0"
+        "anax/anax-ramverk1-me": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
