--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,9 @@ script:
     - make check
     - make test
 
-# notifications:
-#     irc: "irc.freenode.org#dbwebb"
-#     urls:
-#       - https://webhooks.gitter.im/e/d22ae4887d7128ff1092
-#     on_success: change  # options: [always|never|change] default: always
-#     on_failure: always  # options: [always|never|change] default: always
-#     on_start: never     # options: [always|never|change] default: always
+notifications:
+    urls:
+      - https://webhooks.gitter.im/e/f2741cd708bac8ef6e8d
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
