--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ notifications:
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/550672bf01cd470a262d
-    on_success: change  # options: [always|never|change] default: always
+    on_success: always  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: never     # options: [always|never|change] default: always
